--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
           folder: www # The folder the action should deploy.
           clean: true
           single-commit: true
-          trace: true
+          clean-exclude: assets
