--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
         uses: pengx17/logseq-publish@v0.1
       - name: add a nojekyll file # to make sure asset paths are correctly identified
         run: touch $GITHUB_WORKSPACE/www/.nojekyll
+      - name: Build the site
+        run: ./org_cp_assets.sh
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.9
         with:
@@ -32,4 +34,3 @@ jobs:
           folder: www # The folder the action should deploy.
           clean: true
           single-commit: true
-          clean-exclude: assets
