--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: '0 15 10 ? * *'
+    - cron: '15 10,22 * * *'
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
