--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,12 @@ name: CI
 
 # Controls when the workflow will run
 on:
+  # Triggers the workflow just at 10:15 and 22:15 UTC every day.
   schedule:
     - cron: '15 10,22 * * *'
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
+  #push:
+  #  branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
