--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow just at 10:15 and 22:15 UTC every day.
+  # Triggers the workflow just at 02:15 UTC every day. 换算成中国时区 +8 为 10:15 分
   schedule:
-    - cron: '15 10,22 * * *'
+    - cron: '15 02 * * *'
   # Triggers the workflow on push or pull request events but only for the master branch
   #push:
   #  branches: [ master ]
