--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,11 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow just at 02:15 UTC every day. 换算成中国时区 +8 为 10:15 分
-  schedule:
-    - cron: '15 02 * * *'
+  #schedule:
+  #  - cron: '15 02 * * *'
   # Triggers the workflow on push or pull request events but only for the master branch
-  #push:
-  #  branches: [ master ]
+  push:
+    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
